; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_enlighten.c_xen_clts.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_enlighten.c_xen_clts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.multicall_space = type { i32 }

@PARAVIRT_LAZY_CPU = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @xen_clts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_clts() #0 {
  %1 = alloca %struct.multicall_space, align 4
  %2 = alloca %struct.multicall_space, align 4
  %3 = call i32 @xen_mc_entry(i32 0)
  %4 = getelementptr inbounds %struct.multicall_space, %struct.multicall_space* %2, i32 0, i32 0
  store i32 %3, i32* %4, align 4
  %5 = bitcast %struct.multicall_space* %1 to i8*
  %6 = bitcast %struct.multicall_space* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 %6, i64 4, i1 false)
  %7 = getelementptr inbounds %struct.multicall_space, %struct.multicall_space* %1, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @MULTI_fpu_taskswitch(i32 %8, i32 0)
  %10 = load i32, i32* @PARAVIRT_LAZY_CPU, align 4
  %11 = call i32 @xen_mc_issue(i32 %10)
  ret void
}

declare dso_local i32 @xen_mc_entry(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @MULTI_fpu_taskswitch(i32, i32) #1

declare dso_local i32 @xen_mc_issue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
